syntax = "proto3";

option csharp_namespace = "DarkDeeds.TaskServiceApp.Contract";

import "Protos/models.proto";

package taskServiceApp;

service TaskService {
  rpc LoadActual (LoadActualRequest) returns (LoadActualReply);
  rpc LoadByDate (LoadByDateRequest) returns (LoadByDateReply);
  rpc Save (SaveRequest) returns (SaveReply);
}

message LoadActualRequest {
  int64 fromDate = 1;
}

message LoadActualReply {
  repeated TaskModel tasks = 1;
}

message LoadByDateRequest {
  int64 fromDate = 1;
  int64 toDate = 2;
}

message LoadByDateReply {
  repeated TaskModel tasks = 1;
}

message SaveRequest {
  repeated TaskModel tasks = 1;
}

message SaveReply {
  repeated TaskModel tasks = 1;
}
